Forth day progress

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Flying Pig</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 
   <script src="js/background.js"></script>
+  <script src="js/backgroundStates.js"></script>
+
+  <!-- <script src="js/points.js"></script> -->
   <script src="js/clouds.js"></script>
   <script src="js/player.js"></script>
   <script src="js/game.js"></script>
@@ -16,7 +19,12 @@
 </head>
 <body>
 
+  <div class="portada-principal">
+    <h1>I'm flying high<br>High off the ground</h1>
+  </div>
+
   <canvas id="cerdito"></canvas>
+
   
 </body>
 </html>
